<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/menu_dashboard_icon"
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/search_icon"
            android:id="@+id/nav_search"
            android:title="@string/search" />
        <item
            android:icon="@drawable/categories_icon"
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories" />
        <item
            android:icon="@drawable/helpfaq_icon"
            android:id="@+id/nav_add_missing_place"
            android:title="@string/help" />
    </group>


    <item android:title="Profile">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/menu_profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/menu_login_icon"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/menu_logout_icon"
                    android:title="@string/logout" />

            </group>

        </menu>

    </item>

    <item android:title="Categories">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_art"
                    android:icon="@drawable/art_icon"
                    android:title="@string/menu_art" />
                <item
                    android:id="@+id/nav_sport"
                    android:icon="@drawable/sports_icon"
                    android:title="@string/menu_sport" />
                <item
                    android:id="@+id/nav_memorabilia"
                    android:icon="@drawable/jewellery_icon"
                    android:title="@string/menu_memorabilia" />
                <item
                    android:id="@+id/nav_electronic"
                    android:icon="@drawable/electronic_icon"
                    android:title="@string/menu_electronic" />

            </group>

        </menu>

    </item>

    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/menu_share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/menu_rate_us_icon"
                    android:title="@string/rate_us" />

            </group>

        </menu>

    </item>

</menu>